--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -6,8 +6,12 @@ on:
   pull_request:
   workflow_dispatch:
 
+concurrency:
+  group: '${{ github.workflow }}-${{ github.job }}-${{ github.head_ref || github.ref_name }}'
+  cancel-in-progress: true
+
 jobs:
-  test:
+  test-sinatra:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -56,3 +60,23 @@ jobs:
 
     - name: End Sinatra application
       run: pkill -f sinatra.teb
+
+  test-rails:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        container:
+          - 'ubuntu-20.04'
+          - 'alpine-3.17'
+        package_ruby_ver:
+          - '3.1.6'
+          - '3.2.4'
+    container:
+      image: ghcr.io/tamatebako/tebako-${{ matrix.container }}:latest
+    steps:
+    - name: Checkout sample
+      uses: actions/checkout@v4
+
+    - name: Package
+      run: tebako press -e bin/rails -o rails.teb -r ror -R ${{ matrix.package_ruby_ver }}
