--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -37,9 +37,7 @@ jobs:
       run: ls -la
 
     - name: Start packaged Sinatra application
-      run: ./sample.tebako &
-      env:
-        PORT: 4567
+      run: ./sample.tebako -p 4567 &
 
     - name: Wait for Sinatra to start
       run: sleep 10
