--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -79,16 +79,16 @@ jobs:
     - name: Look around
       run: ls -la
 
-    - name: Start packaged Sinatra application
-      run: |
-        ./sample.tebako.exe mock-service -p 4567 &
-        echo "PID=$PID" >> $GITHUB_ENV
+    # - name: Start packaged Sinatra application
+    #   run: |
+    #     ./sample.tebako.exe mock-service -p 4567 &
+    #     echo "PID=$PID" >> $GITHUB_ENV
 
-    - name: Wait for Sinatra to start
-      run: sleep 10
+    # - name: Wait for Sinatra to start
+    #   run: sleep 10
 
-    - name: Place GET request
-      run: curl http://localhost:4567
+    # - name: Place GET request
+    #   run: curl http://localhost:4567
 
-    - name: End Sinatra application
-      run: kill -9 $PID
+    # - name: End Sinatra application
+    #   run: kill -9 $PID
