--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -79,10 +79,12 @@ jobs:
     - name: Look around
       run: ls -la
 
-    # - name: Start packaged Sinatra application
-    #   run: |
-    #     ./sample.tebako.exe mock-service -p 4567 &
-    #     echo "PID=$PID" >> $GITHUB_ENV
+    - name: Start packaged Sinatra application
+      run: |
+        ./sample.tebako.exe mock-service -p 4567
+        
+      # &
+      # echo "PID=$PID" >> $GITHUB_ENV
 
     # - name: Wait for Sinatra to start
     #   run: sleep 10
